--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "BABEL-ES6-test",
   "main": "index.html",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "babel script.js --out-file script-compiled.js"
   },
   "repository": {
     "type": "git",
